async io in work

--- a/coros/CMakeLists.txt
+++ b/coros/CMakeLists.txt
@@ -2,6 +2,9 @@ set(LIB_TARGET coros)
 
 add_compile_options("-fcoroutines-ts")
 
+SET(CMAKE_CXX_FLAGS "-I ~/uring/liburing/src/include/")
+SET(CMAKE_CXX_FLAGS "-L ~/uring/liburing/src/")
+
 get_filename_component(LIB_PATH "." ABSOLUTE)
 get_filename_component(LIB_INCLUDE_PATH ".." ABSOLUTE)
 
