--- a/coros/CMakeLists.txt
+++ b/coros/CMakeLists.txt
@@ -2,9 +2,6 @@ set(LIB_TARGET coros)
 
 add_compile_options("-fcoroutines-ts")
 
-SET(CMAKE_CXX_FLAGS "-I ~/uring/liburing/src/include/")
-SET(CMAKE_CXX_FLAGS "-L ~/uring/liburing/src/")
-
 get_filename_component(LIB_PATH "." ABSOLUTE)
 get_filename_component(LIB_INCLUDE_PATH ".." ABSOLUTE)
 
@@ -13,6 +10,8 @@ file(GLOB_RECURSE LIB_HEADERS ${LIB_PATH}/*.hpp)
 
 add_library(${LIB_TARGET} STATIC ${LIB_CXX_SOURCES} ${LIB_HEADERS})
 target_include_directories(${LIB_TARGET} PUBLIC ${LIB_INCLUDE_PATH})
+
+target_link_libraries(${LIB_TARGET} "/lib/liburing.a")
 
 set_target_properties(
         ${LIB_TARGET}
