--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ option(COROS_TESTS "Build coros tests" ON)
 option(COROS_EXAMPLES "Build coros examples" ON)
 option(COROS_ADDRESS_SANITIZE "COROS_ADDRESS_SANITIZE on" ON)
 
-add_subdirectory(twist)
+#add_subdirectory(twist)
 
 add_subdirectory(coros)
 
