--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -26,4 +26,4 @@ set_target_properties(
         CXX_STANDARD 20
         CXX_STANDARD_REQUIRED ON)
 
-add_subdirectory(twist)
+#add_subdirectory(twist)
